--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,13 +29,17 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  google_fonts: ^2.1.0
+  introduction_screen: ^2.1.0
+  math_expressions: ^2.2.0
+  intl: ^0.17.0
+  firebase_core: ^1.8.0
+  firebase_auth: ^3.1.4
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  google_fonts: ^2.1.0
-  introduction_screen: ^2.1.0
 
 dev_dependencies:
   flutter_test:
