--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   path_provider: ^2.0.6
   open_file: ^3.2.1
   syncfusion_flutter_pdf: ^19.3.53-beta
+  syncfusion_flutter_datagrid: ^19.3.54
 
 
   # The following adds the Cupertino Icons font to your application.
